SWIL-2 - org.csstudio.iter product Fixes for Sonar reported issues for org.csstudio.iter product